--- a/Fraud_Detection.ipynb
+++ b/Fraud_Detection.ipynb
@@ -4626,9 +4626,8 @@
     "# **2**\n",
     "\n",
     "In addition to abnormal accruals, there are other firm-level factors (i.e., market-based incentives\n",
-    "like prior stock performance, need for financing, etc.) that may predict fraud. Include at least 2 of\n",
-    "these additional factors in the model above along with accruals and examine whether these factors\n",
-    "explain restatements. Explain your findings."
+    "like prior stock performance, need for financing, etc.) that may predict fraud. Let's add some additional factors in the model above along with accruals and examine whether these factors\n",
+    "explain restatements."
    ],
    "metadata": {
     "id": "n7Z8myfLdBvL"
